--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
        <script type="text/javascript">
-window.location.href = "https://https-www-remittix-io.netlify.app/";
+window.location.href = "https://www-remittix-presale.netlify.app/";
 </script>
   
   <style>
